# swiswim

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Makefile  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 05c164a2849a_unique_constraint_exercise.py  1c839382ecae_unique_constraints_allv2.py  36f64f79f8cb_trainingstep_reformat.py  610c85ed67fc_model_improvements.py  78f69734f852_sessions_to_workouts.py  a050827937eb_timezones_to_datetimes.py  b3a1f7c9d2e4_training_step_repetitions.py  cf7975e52d9b_unique_constraints_all.py  ef6716c32228_schema_v01.py
backend/src/backend/: config.py  limiter.py  logging_config.py  main.py  middleware.py
backend/static/: style.css
backend/templates/: 404.html  base.html  dashboard.html  exercise.html  exercises.html  index.html  login.html  profile.html  register.html  training.html  trainings.html  workout.html  workouts.html
backend/tests/: conftest.py  db.py  helpers.py
backend/tests/auth/: conftest.py  test_login.py  test_logout.py  test_register.py  test_router_errors.py  test_router_login.py  test_router_logout.py  test_router_rate_limit.py  test_router_refresh.py  test_router_register.py  test_service.py  test_token_refresh.py
backend/tests/exercises/: test_router.py  test_router_errors.py  test_service.py
backend/tests/seeds/: test_exercises_seed.py  test_seed_manager.py
backend/tests/trainings/: test_router.py  test_router_errors.py  test_service.py
backend/tests/users/: test_router.py  test_router_validation.py  (+1 more)
(+32 files in other folders)
